# selenium_framework

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  req.txt
api/: custom_request.py  custom_response.py  frame_request.py
api/services/reqres_in/: login.py  register.py  reqres_in.py  unknown.py  users.py
dto/: generic.py  login_dto.py  register_dto.py  unknown_dto.py  users_dto.py
other/: config.py  generator_datetime.py  logging.py  model.py  random_values.py  utils.py
tests/: allure_constants.py  conftest.py  constants.py
tests/api/: conftest.py
tests/api/login/: test_login.py
tests/api/register/: test_register.py
tests/api/resource/: test_get_resource_list.py  test_get_single_resource.py
tests/api/users/: conftest.py  test_create_user.py  test_delete_user.py  test_get_single_user.py  test_get_users_list.py  test_update_user.py
tests/web/: test_ui_response_body.py
web/: driver_config.py  driver_factory.py  locator.py
web/pages/: base_page.py
web/pages/reqres_in/: main_page.py
