[tool.poetry]
name = "test-framework"
version = "0.1.0"
description = ""
authors = ["KhabarovSpoe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
allure-pytest = "^2.13.2"
pydantic = "^2.5.3"
pytest = "8.0.0"
selenium = "4.17.2"
requests = "2.31.0"
mimesis = "11.1.0"
jsonpath-rw-ext = "1.2.2"
email-validator = "^2.1.0.post1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
